# backend/src/main/java/io/swagger/api/TurnipPatternApi.java
@@ -1,0 +1,32 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.4.13).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package io.swagger.api;
+
+import io.swagger.annotations.*;
+import io.swagger.model.CalculationRequest;
+import io.swagger.model.TurnipPatternMap;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+
+import javax.validation.Valid;
+
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-10T16:36:46.244Z")
+
+@Api(value = "turnipPattern", description = "the turnipPattern API")
+@RequestMapping(value = "")
+public interface TurnipPatternApi {
+
+    @ApiOperation(value = "", nickname = "turnipPatternPost", notes = "Calculate possible turnip patterns ```Example: http://192.168.99.101:4041/turnipPattern```", response = TurnipPatternMap.class, tags = {"Turnip",})
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "Successfully calculated the possible turnip patterns", response = TurnipPatternMap.class)})
+    @RequestMapping(value = "/turnipPattern",
+            produces = {"application/json", "text/html"},
+            method = RequestMethod.POST)
+    ResponseEntity<TurnipPatternMap> turnipPatternPost(@ApiParam(value = "Turnip pattern calculation request", required = true) @Valid @RequestBody CalculationRequest calculationRequest);
+
+}
