# backend/src/main/java/io/swagger/model/TurnipPrice.java
@@ -1,0 +1,105 @@
+package io.swagger.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+
+import java.util.Objects;
+
+/**
+ * TurnipPrice
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-10T16:36:46.244Z")
+
+public class TurnipPrice {
+  @JsonProperty("min")
+  private Integer min = null;
+
+  @JsonProperty("max")
+  private Integer max = null;
+
+  public TurnipPrice min(Integer min) {
+    this.min = min;
+    return this;
+  }
+
+  /**
+   * Get min
+   *
+   * @return min
+   **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getMin() {
+    return min;
+  }
+
+  public void setMin(Integer min) {
+    this.min = min;
+  }
+
+  public TurnipPrice max(Integer max) {
+    this.max = max;
+    return this;
+  }
+
+  /**
+   * Get max
+   *
+   * @return max
+   **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getMax() {
+    return max;
+  }
+
+  public void setMax(Integer max) {
+    this.max = max;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    TurnipPrice turnipPrice = (TurnipPrice) o;
+    return Objects.equals(this.min, turnipPrice.min) &&
+            Objects.equals(this.max, turnipPrice.max);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(min, max);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class TurnipPrice {\n");
+
+    sb.append("    min: ").append(toIndentedString(min)).append("\n");
+    sb.append("    max: ").append(toIndentedString(max)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
